JEDIT VERSION HISTORY

* Version 2.4pre7

+ Enhancements

- Firewall plugin sources moved to their own fileset
- The 'Open' and 'Save As' dialog boxes are now loaded in a background thread
  with minimum priority once jEdit has started

+ Bug Fixes

- JEditTextArea.addNotify() now sets focusedComponent if hasFocus() returns
  true (this should finally solve the 'caret losing focus' problem) (since
  1.7pre5)
- Sometimes a 'Save As' wouldn't update the buffer tab (since 2.4pre6)
- TokenMarker.linesChanged() tweaked once again -- this should result in more
  accurate syntax highlighting when lines are being deleted, for example
  (since 2.4pre1)
- select-document-home and select-document-end actions didn't have key bindings
  (since 2.4pre6)

* Version 2.4pre6

+ New Features

- In C-like modes, the indent will be shifted if the previous line contains
  an 'if', 'else', 'while', 'for' or 'case' statement. This is implemented
  using a regular expression in the 'indentPrevLine' buffer-local property
- The Firewall plugin by Dirk Moebius <dmoebius@gmx.net> is now included
  in the core download. The Firewall plugin allows you to use the plugin
  manager and latest version check behind a firewall

+ Enhancements

- XML mode now opens all files whose first line contains <?xml in XML mode
- XSL mode now highlights JavaScript in <xsl:script> and <xsl:eval> tags
  (Oliver Rutherfurd)
- jEdit will now display more meaningful error messages when you try to
  open a directory, or a file with insufficent permissions
- Text area actions are now implementations of the EditAction class. This
  simplifies matters in a few places
- New jEdit.getBooleanProperty() and setBooleanProperty() methods
- Documentation updates
- Option panes now only create their UIs on demand, as a result the
  'Global Options' dialog box should appear much more quickly

+ Bug Fixes

- If an error occurred while loading or saving a file, jEdit would claim that